# ota-demo

./: .env  .gitignore  LICENSE  README.md  ota-init.sh  ota-local.yml  ota_client.py  ota_server.py  ota_setup.py  pyproject.toml  utils.py
